edited html file

--- a/ValidateDataEntry.html
+++ b/ValidateDataEntry.html
@@ -121,7 +121,7 @@ input[type=text] {
   
   }
   </script>
-  <button onclick="liam()" class="button">Press Me</button>
+  <button onclick="nasos()" class="button">Press Me</button>
   <br>
   <p id="ans" class="pars">Cinema Experience!</p>
   
